Add SystemInfo protobuf
- Updated the README with accurate checked tasks
- Created a SystemInfo proto
- Added a script to generate the Python client
- Add the command to start the gRPC service
- Add a test client that can be run inside the container

--- a/{{ cookiecutter.project_slug }}/Makefile
+++ b/{{ cookiecutter.project_slug }}/Makefile
@@ -1,7 +1,23 @@
-.PHONY: build help
+SHELL := bash
 
-build:
-	echo "First commit"
+.PHONY: build help generate-proto
+
+PROTO_DIR = ./protos/generated
+
+build: build-server
+
+build-server:
+	cd server; \
+	docker build -t {{ cookiecutter.app_name }}:latest .
+
+run:
+	docker run -it {{ cookiecutter.app_name }}:latest
 
 help:
 	@awk 'BEGIN {FS = ":.*?## "} /^[a-zA-Z_-]+:.*?## / {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}' $(MAKEFILE_LIST) | sort
+
+generate-proto:
+	docker run -v "${PWD}":/src -w /src grpc/python:1.4 bash ./generate-grpc-code.sh && \
+	cp -rf ./protos/python/proto/* ./server/proto/ && \
+	cp -rf ./protos/python/proto/* ./client/python/proto/ && \
+	tree ./protos
