Added a docker-compose file
- Added docker-compose file with the version 3
- Updated Makefile with docker-compose commands in place of docker commands
- Added a healthcheck to the server image

--- a/{{ cookiecutter.project_slug }}/Makefile
+++ b/{{ cookiecutter.project_slug }}/Makefile
@@ -4,14 +4,11 @@ SHELL := bash
 
 PROTO_DIR = ./protos/generated
 
-build: generate-proto build-server
-
-build-server:
-	cd server; \
-	docker build -t {{ cookiecutter.app_name }}:latest .
+build: generate-proto
+	docker-compose build
 
 run:
-	docker run -it {{ cookiecutter.app_name }}:latest
+	docker-compose up -d
 
 help:
 	@awk 'BEGIN {FS = ":.*?## "} /^[a-zA-Z_-]+:.*?## / {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}' $(MAKEFILE_LIST) | sort
